[package]
name = "pangolin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
rand = "0.8.5"
portpicker = "0.1.1"
tiny_http = "0.12.0"
nix = { version = "0.27.1", features = ["signal"] }
clap = "4.5.0"
clap_derive = "4.5.0"